<resources>
    <string name="app_name">Minescope</string>
    <string name="app_label">Minescope</string>
    <string name="search_hint">Search mineral</string>
    <string name="settings">Settings</string>
    <string name="mineral_not_found">Mineral not found</string>
    <string name="transparentes">Transparents</string>
    <string name="opacos">Opaques</string>
    <string name="filtro">Filter</string>

    <string name="theme">THEME</string>
    <string name="darck">Darck</string>
    <string name="light">Light</string>
    <string name="text">text</string>
    <string name="images">IMAGES</string>
    <string name="downloadAllPhone">DOWNLOAD ALL IMAGES(220MB)</string>
    <string name="downloadAllTablet7">DOWNLOAD ALL IMAGES(330MB)</string>
    <string name="downloadAllTablet10">DOWNLOAD ALL IMAGES(440MB)</string>
    <string name="textSize">TEXT SIZE</string>
    <string name="language">LANGUAGE</string>
    <string name="change_lang">Change</string>
    <string-array name="array_language">
        <item>English</item>
        <item>Spanish</item>
        <item>Catalan</item>
    </string-array>
    <string name="rate">Rate the app</string>

    <string name="lpna">LPNA</string>
    <string name="lpa">LPA</string>

    <string name="formula">Formula</string>
    <string name="shape">Shape</string>
    <string name="relief">Relief</string>
    <string name="color">Colors</string>
    <string name="pleochroism">Pleochroism</string>
    <string name="cleavage">Cleavage</string>
    <string name="alteration">Alteration</string>
    <string name="interferencecolor">Interference colors</string>
    <string name="extinction">Extinction</string>
    <string name="twinning">Twinning</string>
    <string name="zonation">Zonation</string>
    <string name="interferencefigure">Interference figure</string>
    <string name="opticalsign">Optical sign</string>
    <string name="abundance">Abundance</string>
    <string name="others">Others</string>
    <string name="viewMicroscope">View in microscope</string>

    <string name="polishingcleavage">Polishing cleavage</string>
    <string name="reflectance">Reflectance</string>
    <string name="polishinghardness">Polishing hardness</string>
    <string name="anisotropism">Anisotropism</string>
    <string name="internalreflections">Internal reflections</string>
    <string name="associatedminerals">Associated minerals</string>
    <string name="morphology">Morphology</string>

    <string name="downloadThinSectionTransparentsPhone">DOWNLOAD THIN SECTION (5MB)</string>
    <string name="downloadThinSectionTransparentsTablet7">DOWNLOAD THIN SECTION (7.5MB)</string>
    <string name="downloadThinSectionTransparentsTablet10">DOWNLOAD THIN SECTION (10MB)</string>
    <string name="downloadThinSectionOpaquesPhone">DOWNLOAD THIN SECTION (2MB)</string>
    <string name="downloadThinSectionOpaquesTablet7">DOWNLOAD THIN SECTION (3MB)</string>
    <string name="downloadThinSectionOpaquesTablet10">DOWNLOAD THIN SECTION (4MB)</string>
    <string name="problemDownload">There was a problem downloading images. Try later.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download this section</string>
    <string name="noConnection">There is no internet connection.</string>
    <string name="close">Close</string>

    <string name="mineral_match">MINERAL MATCH</string>
    <string name="diaphaneity">Diaphaneity</string>
    <string-array name="array_diaphaneity">
        <item>Transparent</item>
        <item>Opaque</item>
    </string-array>
    <string-array name="array_relief">
        <item>All</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string-array name="array_color">
        <item>All</item>
        <item>Colorless</item>
        <item>Yellow</item>
        <item>Pink</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Brown</item>
    </string-array>
    <string-array name="array_pleochroism">
        <item>All</item>
        <item>Without</item>
        <item>Soft</item>
        <item>Strong</item>
    </string-array>
    <string-array name="array_cleavage">
        <item>All</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3 or more</item>
    </string-array>
    <string-array name="array_angle">
        <item>All</item>
        <item>Right</item>
        <item>Acute</item>
        <item>Not visible</item>
    </string-array>
    <string-array name="array_interference">
        <item>All</item>
        <item>Isotropic</item>
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>Anomalous</item>
        <item>Masked</item>
    </string-array>
    <string-array name="array_extinction">
        <item>All</item>
        <item>Total</item>
        <item>Right</item>
        <item>Oblique</item>
        <item>Undulose</item>
    </string-array>
    <string-array name="array_twinning">
        <item>All</item>
        <item>Without</item>
        <item>Simple</item>
        <item>Polysynthetic</item>
        <item>Crossed</item>
        <item>Cyclic</item>
    </string-array>
    <string-array name="array_interference_figure">
        <item>All</item>
        <item>Uniaxial</item>
        <item>Biaxial</item>
    </string-array>
    <string-array name="array_optical_sign">
        <item>All</item>
        <item>Positive</item>
        <item>Negative</item>
    </string-array>
    <string-array name="array_none">
        <item>---</item>
    </string-array>
    <string-array name="array_color_opaques">
        <item>All</item>
        <item>White</item>
        <item>Yellow</item>
        <item>Pink</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Brown</item>
        <item>Gray</item>
    </string-array>
    <string-array name="array_reflectance">
        <item>All</item>
        <item>Low</item>
        <item>Medium</item>
        <item>Strong</item>
        <item>Very strong</item>
    </string-array>
    <string-array name="array_pleochroism_opaques">
        <item>All</item>
        <item>Without or weak</item>
        <item>Strong</item>
    </string-array>
    <string-array name="array_polishing_hardness">
        <item>All</item>
        <item>Soft</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="array_anisotropism">
        <item>All</item>
        <item>Isotropic</item>
        <item>Moderately anisotropic</item>
        <item>Strongly anisotropic</item>
    </string-array>
    <string-array name="array_interference_colors">
        <item>All</item>
        <item>White</item>
        <item>Yellow</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Brown</item>
        <item>Gray</item>
        <item>Masked for internal reflections</item>
        <item>Without</item>
    </string-array>
    <string-array name="array_internal_reflections">
        <item>All</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="positive">POSITIVE</string>
    <string name="negative">NEGATIVE</string>
    <string name="uniaxial">UNIAXIAL</string>
    <string name="biaxial">BIAXIAL</string>

    <string name="number_of_cleavage_directions">Cleavage directions</string>
    <string name="angle_of_cleavage">Angle of cleavage</string>
    <string name="question">\?</string>

    <string name="credits">Credits</string>
    <string name="contact">Contact</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="share">Share</string>
    <string name="warning">WARNING. It takes more than an hour to download all the images.</string>
    <string name="launch">I want to launch the download.</string>
    <string name="cancelDownload">Cancel process. Maybe later.</string>
    <string name="serverOut">Server is not available. Try it later</string>

    <string name="minescope">MINESCOPE</string>
    <string name="authors">AUTHORS</string>
    <string name="merce1">Maria Mercè Corbella Cordomi</string>
    <string name="merce2">Project Coordinator</string>
    <string name="merce3">Mineralogy teacher, Autonomous University of Barcelona</string>
    <string name="miquel1">Miquel Roquet Peña</string>
    <string name="miquel2">Final Degree Project</string>
    <string name="miquel3">Degree in geology, Autonomous University of Barcelona</string>
    <string name="raquel1">Raquel Arasanz Pujol</string>
    <string name="raquel2">Final Degree Project</string>
    <string name="raquel3">Degree in geology, Autonomous University of Barcelona</string>
    <string name="manuel1">Manuel Ignacio Muro Sabater</string>
    <string name="manuel2">App developer</string>
    <string name="manuel3">Degree in geology, University of Basque Country</string>
    <string name="manuel4">Android developer account</string>
    <string name="manuel5">Facebook</string>

</resources>