<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">
    <ScrollView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">
            <include
                android:id="@+id/app_bar_activities"
                layout="@layout/app_bar_activities"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        <TextView
            android:id="@+id/app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/minescope"
            android:textStyle="bold">
        </TextView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icono">
        </ImageView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo">
        </ImageView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_sem">
        </ImageView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/authors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/authors"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/miquel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miquel1"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/miquel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miquel2"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/miquel3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miquel3"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/raquel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/raquel1"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/raquel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/raquel2"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/raquel3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/raquel3"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/merce1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/merce1"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/merce2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/merce2"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/merce3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/merce3"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/manuel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manuel1"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/manuel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manuel2"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/manuel3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manuel3"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/manuel4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manuel4"
            android:gravity="center">
        </TextView>
    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
