<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">
    <ScrollView
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">
            <include
                android:id="@+id/app_bar_activities"
                layout="@layout/app_bar_activities"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp">
            </Space>
            <TextView
                android:id="@+id/languaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="5dp">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerLanguage"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">
                </Spinner>
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnLanguage"
                    android:text="@string/change_lang">
                </Button>
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp">
            </Space>
            <TextView
                android:id="@+id/theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="5dp">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
                <Button
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    app:backgroundTint="@null"
                    android:background="@drawable/roundcorner_light"
                    android:text="@string/text"
                    android:textColor="@color/black"
                    android:textAllCaps="false">
                </Button>
                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content">
                </Space>
                <Button
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    app:backgroundTint="@null"
                    android:background="@drawable/roundcorner_darck"
                    android:text="@string/text"
                    android:textColor="@color/white"
                    android:textAllCaps="false">
                </Button>
            </LinearLayout>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rbLight"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/light">
                </RadioButton>
                <RadioButton
                    android:id="@+id/rbDarck"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/darck">
                </RadioButton>
            </RadioGroup>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp">
            </Space>
            <TextView
                android:id="@+id/textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textSize"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="5dp">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rbVerySmall"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.20"
                        android:text="-2">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/rbSmall"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.20"
                        android:text="-1">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/rbMedium"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.20"
                        android:text="0">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/rbBig"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.20"
                        android:text="+1">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/rbVeryBig"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.20"
                        android:text="+2">
                    </RadioButton>
                </RadioGroup>
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp">
            </Space>
            <TextView
                android:id="@+id/images"
                android:text="@string/images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                tools:ignore="MissingConstraints">
            </TextView>
            <Button
                android:id="@+id/download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">
            </Button>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp">
            </Space>
            <TextView
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_horizontal"
                android:padding="5dp">
            </TextView>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp">
            </Space>
            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_horizontal"
                android:padding="5dp">
            </TextView>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp">
            </Space>
            <TextView
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_horizontal"
                android:padding="5dp">
            </TextView>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp">
            </Space>
            <TextView
                android:id="@+id/credits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credits"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_horizontal"
                android:padding="5dp">
            </TextView>
            <TextView
                android:id="@+id/rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_horizontal"
                android:padding="5dp">
            </TextView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>