<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/positive"
            android:gravity="center_horizontal"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/biaxial"
            android:gravity="center_horizontal"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/biaxial_positivo1"
            android:layout_gravity="center_horizontal"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/biaxial_positivo2"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/negative"
            android:gravity="center_horizontal"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/biaxial"
            android:gravity="center_horizontal"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/biaxial_negativo1"
            android:layout_gravity="center_horizontal"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/biaxial_negativo2"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>
